# splunk-soar-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .releaserc  QUICKSTART_TESTING.md  README.md  TESTING_AND_DEPLOYMENT_STEPS.md  app_templates  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/scripts/: generate_test_summary.py
.github/utils/: app_rest_installer.py  github.js  update_version.py
.github/workflows/: RUNNER_CONFIGURATION.md  SETUP_CHECKLIST.md  build_release.yml  code_quality.yml  commit_hygiene.yml  dependabot_precommit_autofix.yml  generate_docs.yml  integration_tests.yml  publish.yml  semantic_release.yml
app_templates/basic_app/: pyproject.toml
app_templates/basic_app/src/: app.py
app_templates/basic_app/tests/: test_app.py
docs/: api_reference.rst  conf.py  getting_started.md  index.rst  oauth.rst
docs/_static/: custom.css
docs/actions/: action_anatomy.md  action_decorator.md
docs/app_structure/: app.py.md  pyproject.toml.md  src_app.rst
docs/authentication/: oauth.rst  static_token.rst
docs/custom_views/: reusable_components.md  templates.md  view_handlers.md
docs/getting_started/: defining_asset.rst  first_action.rst  init_app.rst  testing_and_building.rst
example_app/: app.py
mcp_server/: QUICKSTART.md  README.md  USAGE_GUIDE.md  install.sh  mcp_config.json  pyproject.toml  ruff.toml
mcp_server/src/soar_test_assistant/: __init__.py  server.py  test_analyzer.py  test_fixer.py
mcp_server/tests/: __init__.py  test_analyzer.py
soar_sdk/: abstract.py  action_results.py  actions_manager.py  actions_provider.py  adapters.py  api_callers.py  app.py  app_runner.py  connector.py  params.py  types.py
soar_sdk/cli/: cli.py
soar_sdk/cli/manifests/: cli.py  path_utils.py  processors.py  serializers.py
soar_sdk/cli/metafiles/: cli.py  processors.py  serializers.py
soar_sdk/cli/tests/: test_serializers.py
soar_sdk/meta/: actions.py  adapters.py  app.py  datatypes.py
src/soar_sdk/: __init__.py  abstract.py  action_group.py  action_results.py  actions_manager.py  actions_provider.py  adapters.py  api_callers.py  app.py  app_cli_runner.py  app_client.py  app_decorators.py  app_runner.py  artifact.py  asset.py  asset_state.py  async_utils.py  compat.py  concurrency.py  connector.py  container.py  crypto.py  exceptions.py  field_utils.py  input_spec.py  logging.py  params.py  paths.py  template_filters.py  template_renderer.py  types.py  vault.py  view_parser.py
src/soar_sdk/apis/: __init__.py  artifact.py  container.py  vault.py
src/soar_sdk/apis/es/: findings.py
src/soar_sdk/auth/: __init__.py  client.py  factories.py  flows.py  httpx_auth.py
src/soar_sdk/cli/: cli.py  utils.py
src/soar_sdk/cli/app/: cli.py
src/soar_sdk/cli/init/: cli.py  (+1 more)
src/soar_sdk/code_renderers/: action_renderer.py  app_renderer.py  asset_renderer.py  pre_commit_renderer.py  renderer.py  toml_renderer.py
src/soar_sdk/decorators/: action.py  make_request.py  on_es_poll.py  on_poll.py  view_handler.py
src/soar_sdk/extras/: __init__.py
src/soar_sdk/meta/: actions.py  adapters.py  app.py  datatypes.py  dependencies.py  webhooks.py
src/soar_sdk/models/: __init__.py  artifact.py  attachment_input.py  container.py  finding.py  view.py
src/soar_sdk/oauth/: __init__.py  client.py  flows.py  httpx_auth.py  models.py
src/soar_sdk/reusable_views/: __init__.py  pie_chart.py
src/soar_sdk/views/: template_filters.py  template_renderer.py  view_parser.py
src/soar_sdk/webhooks/: models.py  routing.py
tests/: conftest.py  stubs.py  test_action_results.py  test_actions_manager.py  test_actions_provider.py  test_adapters.py  test_app.py  test_app_action.py  test_app_action_params.py  test_app_action_results.py  test_app_actions.py  test_app_actions_results.py  test_app_client.py  test_app_runner.py  test_asset.py  test_asset_state.py  test_code_renderers.py  test_connector.py  test_container.py  test_credential_management.py  test_custom_views.py  test_email_data.py  test_email_processor.py  test_encryption.py  test_encryption_helper.py  test_es_on_poll.py  test_field_utils.py  test_finding.py  test_logging.py  test_oauth_certificate_client.py  test_oauth_client.py  test_oauth_factories.py  test_oauth_flows.py  test_oauth_httpx_auth.py  test_oauth_models.py  test_on_poll.py  test_outlook.py  test_params.py  test_permissive_action_results.py  test_rfc5322.py  (+3 more)
tests/cli/: test_cli.py  test_convert_cli.py  test_deserializers.py  test_init_cli.py  test_manifests_cli.py  test_notice_cli.py  test_package_cli.py  test_package_utils.py  test_serializers.py  test_utils.py
tests/cli/manifests/: test_processors.py  test_python_version_resolution.py
tests/code_renderers/: test_action_renderer.py
tests/example_app/: NOTICE  README.md  app.json  example_asset.json  example_asset_es.json  pyproject.toml  requirements.txt
tests/example_app/src/: __init__.py  action_group.py  app.py
tests/example_app/src/actions/: async_action.py  permissive_action.py
tests/example_app/templates/: reverse_string.html
tests/example_app/tests/: test_example.py  test_with_failure.py
tests/example_app_plaintext_state/: README.md  app.json  example_asset.json  pyproject.toml
tests/example_app_plaintext_state/src/: app.py
tests/example_app_with_oauth/: app.json  pyproject.toml
tests/example_app_with_oauth/src/: app.py
tests/example_app_with_webhook/: app.json  pyproject.toml
tests/example_app_with_webhook/src/: app.py
tests/integration/: README.md  __init__.py  conftest.py  phantom_constants.py  phantom_instance.py  soar_client.py  test_asset_state_filesystem.py  test_es_poll.py  test_example_app.py  test_example_app_with_webhook.py  test_package_install.py  test_vault_client.py
tests/interfaces/: test_container_interface.py  test_vault_interface.py
tests/meta/: test_actions.py  test_adapters.py  test_datatypes.py  test_dependencies.py  test_webhooks.py
tests/mocks/: importable_action.py
tests/webhooks/: test_routing.py
tests_e2e/: conftest.py  test_example_app.py
(+48 files in other folders)
