[tool.poetry]
name = "Splunk SOAR App SDK"
version = "0.1.0"
description = "A framework for developing and testing the Splunk SOAR Apps"
authors = [
    "Jacob Davis <jacobd@splunk.com>",
    "Janusz Kamieński <jkamienski@splunk.com>",
    "Michał Posłuszny <mposluszny@splunk.com>"
]
readme = "README.md"
homepage = "https://www.splunk.com/en_us/products/splunk-security-orchestration-and-automation.html"
packages = [{include = "soar_sdk"}]

[tool.poetry.scripts]
soarapps = "soar_sdk.cli.cli:main"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
toml = "^0.10.2"
typer = "^0.12.5"
# SOAR phantom lib dependencies
beautifulsoup4 = "4.10.0"
pydantic = "1.10.13"
requests = "2.32.3"
responses = "0.22.0"
distro = "1.8.0"
pytest = "7.4.2"
simplejson = "3.17.2"

[tool.poetry.group.dev.dependencies]
poetry = "1.8.2"
coverage = "^7.6.7"
ipython = "8.18.1"
ipdb = "^0.13.13"
mypy = "1.2.0"
ruff = "^0.7.4"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-watch = "^4.2.0"
pre-commit = "3.7.0"
types-urllib3 = "^1.26.25.13"
types-requests = "^2.31.0.1"
types-setuptools = "^70.0.0.0"
types-beautifulsoup4 = "^4.12.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.pytest.ini_options]
addopts = "--ignore=demo_app --cov"  # TODO: Remove demo_app ignore, once it's no longer used

[tool.coverage.run]
source = [
    "soar_sdk"]
omit = [
    "soar_sdk/cli/cli.py",
    "soar_sdk/cli/manifests/cli.py",
    "soar_sdk/api_callers.py"]  # moved 1:1 from App Wizard, not re-designed yet

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "# pragma: no cover",
    "if typing.TYPE_CHECKING:"]  # ignore type checks import blocks
