[project]
name = "soar_sdk"
version = "1.0.0-alpha.6"
description = "A framework for developing and testing the Splunk SOAR Apps"
readme = "README.md"
requires-python = ">=3.9, <3.14"
authors = [
    { name = "Jacob Davis", email = "jacobd@splunk.com" },
    { name = "Janusz Kamieński", email = "jkamienski@splunk.com" },
    { name = "Scott Odle", email = "sodle@splunk.com" },
    { name = "Michał Posłuszny", email = "mposluszny@splunk.com" }
]
dependencies = [
    "toml>=0.10.2, <1",
    "typer>=0.12.5, <1",

    # SOAR phantom lib dependencies
    "beautifulsoup4==4.10.0",
    "distro==1.8.0",
    "pydantic==1.10.13",
    "pytest==7.4.2",
    "requests==2.32.3",
    "responses==0.22.0",
    "simplejson==3.17.2",
]

[project.scripts]
soarapps = "soar_sdk.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.7,<8",
    "ipdb>=0.13.13,<1",
    "ipython==8.18.1",
    "mypy==1.2.0",
    "pre-commit==3.7.0",
    "pytest-cov>=5,<6",
    "pytest-mock>=3.14.0,<4",
    "pytest-watch>=4.2.0,<5",
    "ruff>=0.7.4,<1",
    "tomlkit>=0.13.2",
    "types-beautifulsoup4>=4.12.0.5,<5",
    "types-requests>=2.31.0.1,<3",
    "types-urllib3>=1.26.25.13,<2",
]

[[tool.uv.index]]
url = "https://pypi.python.org/simple"

[tool.pytest.ini_options]
addopts = "--ignore=app_templates --cov"  # TODO: Remove demo_app ignore, once it's no longer used

[tool.coverage.run]
source = [
    "soar_sdk"]
omit = [
    "soar_sdk/cli/cli.py",
    "soar_sdk/cli/manifests/cli.py",
    "soar_sdk/api_callers.py"]  # moved 1:1 from App Wizard, not re-designed yet

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "# pragma: no cover",
    "if typing.TYPE_CHECKING:"]  # ignore type checks import blocks
