[project]
name = "exampleapp"
version = "0.1.0"
description = "This is the basic example SOAR app"
readme = "README.md"
requires-python = ">=3.9, <3.14"
authors = [
    { name = "John Smith", email = "jsmith@example.com" }
]
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.6.7",
    "mypy==1.2.0",
    "pre-commit==3.7.0",
    "pytest==7.4.2",
    "pytest-mock==3.14.0",
    "pytest-watch==4.2.0",
    "ruff==0.7.4",
]

[tool.soar.app]
appid = "1e1618e7-2f70-4fc0-916a-f96facc2d2e4"
type = "sandbox"
product_vendor = "Splunk"
logo = "logo.svg"
logo_dark = "logo_dark.svg"
product_name = "Example App"
python_version = "3"
product_version_regex = ".*"
publisher = "Splunk"
license = "Copyright"
package_name = "example_app"
min_phantom_version = "6.2.2.134"
app_wizard_version = "1.0.0"
fips_compliant = false
main_module = "src/app.py:app"
