[project]
name = "exampleapp"
version = "0.1.0"
description = "This is the basic example SOAR app"
readme = "README.md"
requires-python = ">=3.9, <3.14"
authors = [
    { name = "John Smith", email = "jsmith@example.com" }
]
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.6.7",
    "mypy==1.2.0",
    "pre-commit==3.7.0",
    "pytest==7.4.2",
    "pytest-mock==3.14.0",
    "pytest-watch==4.2.0",
    "ruff==0.7.4",
]

[tool.soar.app]
appid = "9b388c08-67de-4ca4-817f-26f8fb7cbf55"
type = "sandbox"
product_vendor = "Splunk Inc."
logo = "example.png"
logo_dark = "example_dark.png"
product_name = "Example App"
python_version = "3"
product_version_regex = ".*"
publisher = "Splunk Inc."
license = "Copyright (c) Splunk Inc., 2025"
package_name = "example_app"
min_phantom_version = "6.2.2.134"
app_wizard_version = "1.0.0"
fips_compliant = false
main_module = "src/app.py:app"
